# speadsheet-to-pdf-2-

./: main.py  pyproject.toml
spreadsheets/: Animal_Spreadsheet.xlsx  Controle_Cartao_e_divida.xlsx  Copy_of_OKR_template_by_Sheetgo_4_5.xlsx  Untitled_spreadsheet.xlsx
