[tool.poetry]
name = "repl_python3_speadsheet-to-pdf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
openpyxl = "^3.0.7"
pandas = "^1.3.1"
Werkzeug = "^2.0.1"
fpdf = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
